syntax="proto3";
package com.sum;
option java_package="com.example.squareRoot";
option java_multiple_files = true;
message SquareRootRequest{
  int32 number=1;
}
message SquareRootResponse{
  double root=1;
}
service SquareRootService{
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse);
}